fix the layout bug

--- a/rest-countries-api-with-color-theme-switcher/src/styles/CountryCard.scss
+++ b/rest-countries-api-with-color-theme-switcher/src/styles/CountryCard.scss
@@ -2,6 +2,7 @@
 a {
   text-decoration: none;
   color: var(--textColor);
+  max-width: 17rem;
 }
 .card-container {
   cursor: pointer;
